[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/GFX/CharacterCardBG.png" type="Texture" id=1]
[ext_resource path="res://Scenes/CharacterControl.gd" type="Script" id=2]
[ext_resource path="res://Resources/GFX/CharacterPortraits/Suspect.png" type="Texture" id=3]
[ext_resource path="res://Resources/GFX/TextBack.png" type="Texture" id=4]
[ext_resource path="res://Resources/GFX/Interface/Font/TextGame.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 124.199, 123.304 )

[sub_resource type="Animation" id=2]
resource_name = "Apperiance"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 2400 ), Vector2( 540, 970 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_process_input"
}, {
"args": [ true ],
"method": "set_process_input"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "LChooseText"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterCard/Control/LeftChooseRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 276, 0 ), Vector2( 276, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterCard/Control/LeftChooseRect/LChooseText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "RChooseText"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterCard/Control/RightChooseRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 276, 0 ), Vector2( 276, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterCard/Control/RightChooseRect/RChooseText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="CharacterControl" type="Area2D" groups=[
"CharacterControl",
]]
position = Vector2( 540, 2400 )
scale = Vector2( 3.2, 3.2 )
script = ExtResource( 2 )

[node name="CharacterCard" type="Sprite" parent="."]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="CharacterPortrait" type="Sprite" parent="CharacterCard"]
scale = Vector2( 1.078, 1.07 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="CharacterCard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -137.0
margin_right = -138.0
margin_bottom = -137.0
rect_pivot_offset = Vector2( 138, 137 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeftChooseRect" type="NinePatchRect" parent="CharacterCard/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -274.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LChooseText" type="Label" parent="CharacterCard/Control/LeftChooseRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -10.0
margin_right = -10.0
margin_bottom = 23.0
rect_rotation = 15.0
custom_fonts/font = ExtResource( 5 )
text = "HelpText"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightChooseRect" type="NinePatchRect" parent="CharacterCard/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -274.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RChooseText" type="Label" parent="CharacterCard/Control/RightChooseRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 55.0
margin_right = -10.0
margin_bottom = 35.0
rect_rotation = -15.0
custom_fonts/font = ExtResource( 5 )
text = "HelpText"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="LeftChoose" type="Position2D" parent="."]
position = Vector2( -450, 0 )

[node name="RightChoose" type="Position2D" parent="."]
position = Vector2( 450, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Apperiance = SubResource( 2 )
anims/LChooseText = SubResource( 3 )
anims/RChooseText = SubResource( 4 )
[connection signal="input_event" from="." to="." method="_on_CharacterControl2_input_event"]
